[gd_scene load_steps=26 format=2]

[ext_resource path="res://scenes/Player.gd" type="Script" id=1]
[ext_resource path="res://assets/player/character_0000.png" type="Texture" id=2]
[ext_resource path="res://assets/player/character_0001.png" type="Texture" id=3]
[ext_resource path="res://scenes/utils/RandomAudioStreamPlayer.tscn" type="PackedScene" id=4]
[ext_resource path="res://assets/sounds/footstep_grass_000.ogg" type="AudioStream" id=5]
[ext_resource path="res://assets/sounds/footstep_grass_004.ogg" type="AudioStream" id=6]
[ext_resource path="res://assets/sounds/footstep_grass_003.ogg" type="AudioStream" id=7]
[ext_resource path="res://assets/sounds/footstep_grass_002.ogg" type="AudioStream" id=8]
[ext_resource path="res://assets/sounds/footstep_grass_001.ogg" type="AudioStream" id=9]
[ext_resource path="res://assets/sounds/footstep_concrete_001.ogg" type="AudioStream" id=10]
[ext_resource path="res://assets/sounds/footstep_concrete_004.ogg" type="AudioStream" id=11]
[ext_resource path="res://assets/sounds/footstep_concrete_002.ogg" type="AudioStream" id=12]
[ext_resource path="res://assets/sounds/footstep_concrete_003.ogg" type="AudioStream" id=13]
[ext_resource path="res://assets/sounds/footstep_concrete_000.ogg" type="AudioStream" id=14]
[ext_resource path="res://assets/sounds/impactBell_heavy_004.ogg" type="AudioStream" id=15]

[sub_resource type="CircleShape2D" id=3]
radius = 16.0

[sub_resource type="RectangleShape2D" id=4]
extents = Vector2( 8, 4 )

[sub_resource type="CapsuleShape2D" id=5]
radius = 11.0
height = 10.0

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 5, 8 )

[sub_resource type="SpriteFrames" id=2]
animations = [ {
"frames": [ ExtResource( 2 ) ],
"loop": true,
"name": "idle",
"speed": 5.0
}, {
"frames": [ ExtResource( 3 ) ],
"loop": true,
"name": "jump",
"speed": 5.0
}, {
"frames": [ ExtResource( 2 ), ExtResource( 3 ) ],
"loop": true,
"name": "run",
"speed": 10.0
} ]

[sub_resource type="Shader" id=7]
code = "shader_type canvas_item;

uniform vec4 baseColor : hint_color;

void fragment() {
	vec4 textColor = texture(TEXTURE, UV);
	COLOR.rgba = vec4(baseColor.r, baseColor.g, baseColor.b, textColor.a);
}"

[sub_resource type="ShaderMaterial" id=8]
shader = SubResource( 7 )
shader_param/baseColor = Color( 0.352941, 0.823529, 0.54902, 1 )

[sub_resource type="Curve" id=9]
_data = [ Vector2( 0, 1 ), 0.0, 0.0, 0, 0, Vector2( 0.15678, 1 ), 0.0, 0.0, 0, 0, Vector2( 1, 0 ), 0.0, 0.0, 0, 0 ]

[sub_resource type="CurveTexture" id=10]
curve = SubResource( 9 )

[sub_resource type="ParticlesMaterial" id=6]
flag_disable_z = true
gravity = Vector3( 0, 0, 0 )
orbit_velocity = 0.0
orbit_velocity_random = 0.0
scale_curve = SubResource( 10 )

[node name="Player" type="KinematicBody2D" groups=["player"]]
script = ExtResource( 1 )
dashHazardMask = 65536

[node name="FootstepAudioStreamPlayer" parent="." instance=ExtResource( 4 )]

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="FootstepAudioStreamPlayer"]
stream = ExtResource( 14 )
volume_db = 4.0
bus = "Footsteps"

[node name="AudioStreamPlayer2" type="AudioStreamPlayer" parent="FootstepAudioStreamPlayer"]
stream = ExtResource( 10 )
volume_db = 4.0
bus = "Footsteps"

[node name="AudioStreamPlayer3" type="AudioStreamPlayer" parent="FootstepAudioStreamPlayer"]
stream = ExtResource( 12 )
volume_db = 4.0
bus = "Footsteps"

[node name="AudioStreamPlayer4" type="AudioStreamPlayer" parent="FootstepAudioStreamPlayer"]
stream = ExtResource( 13 )
volume_db = 4.0
bus = "Footsteps"

[node name="AudioStreamPlayer5" type="AudioStreamPlayer" parent="FootstepAudioStreamPlayer"]
stream = ExtResource( 11 )
volume_db = 4.0
bus = "Footsteps"

[node name="AudioStreamPlayer6" type="AudioStreamPlayer" parent="FootstepAudioStreamPlayer"]
stream = ExtResource( 5 )
volume_db = 4.0
bus = "Footsteps"

[node name="AudioStreamPlayer7" type="AudioStreamPlayer" parent="FootstepAudioStreamPlayer"]
stream = ExtResource( 9 )
volume_db = 4.0
bus = "Footsteps"

[node name="AudioStreamPlayer8" type="AudioStreamPlayer" parent="FootstepAudioStreamPlayer"]
stream = ExtResource( 8 )
volume_db = 4.0
bus = "Footsteps"

[node name="AudioStreamPlayer9" type="AudioStreamPlayer" parent="FootstepAudioStreamPlayer"]
stream = ExtResource( 7 )
volume_db = 4.0
bus = "Footsteps"

[node name="AudioStreamPlayer10" type="AudioStreamPlayer" parent="FootstepAudioStreamPlayer"]
stream = ExtResource( 6 )
volume_db = 4.0
bus = "Footsteps"

[node name="DashAudioPlayer" parent="." instance=ExtResource( 4 )]
enablePitchRandomization = false

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="DashAudioPlayer"]
stream = ExtResource( 15 )
bus = "PlayerDash"

[node name="AudioStreamPlayer2" type="AudioStreamPlayer" parent="DashAudioPlayer"]
stream = ExtResource( 15 )
bus = "PlayerDash"

[node name="CoyoteTimer" type="Timer" parent="."]
wait_time = 0.15
one_shot = true

[node name="PickupArea" type="Area2D" parent="."]
collision_layer = 32768
collision_mask = 32768

[node name="CollisionShape2D" type="CollisionShape2D" parent="PickupArea"]
position = Vector2( 0, -12 )
shape = SubResource( 3 )

[node name="HazzardArea" type="Area2D" parent="."]
position = Vector2( 0, -8 )
collision_layer = 0
collision_mask = 327680

[node name="CollisionShape2D" type="CollisionShape2D" parent="HazzardArea"]
position = Vector2( 0, 4 )
shape = SubResource( 4 )

[node name="DashArea" type="Area2D" parent="."]
position = Vector2( 0, -10 )
collision_layer = 0
collision_mask = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="DashArea"]
position = Vector2( 0, -1 )
rotation = -1.57079
shape = SubResource( 5 )
disabled = true

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( 0, -8 )
shape = SubResource( 1 )

[node name="AnimatedSprite" type="AnimatedSprite" parent="."]
frames = SubResource( 2 )
animation = "run"
offset = Vector2( 0, -12 )

[node name="DashParticles" type="Particles2D" parent="."]
show_behind_parent = true
material = SubResource( 8 )
position = Vector2( 0, -12 )
emitting = false
amount = 50
lifetime = 0.4
local_coords = false
process_material = SubResource( 6 )
texture = ExtResource( 2 )
